# adimanusia

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: case1_pump_clock.txt  case2_crux_roulette.txt  case3_labyrinth.txt  case4_redpoint_crux.txt
docs/: MATH_NOTES.md
outputs/csv/: case_1_the_pump_clock_metrics.csv  case_1_the_pump_clock_trajectories.csv  case_1_the_pump_clock_wall.csv
outputs/netcdf/: case_1_the_pump_clock.nc
src/adimanusia/: __init__.py  cli.py
src/adimanusia/core/: __init__.py  agent.py  lattice.py  solver.py
src/adimanusia/io/: __init__.py  config_manager.py  data_handler.py
src/adimanusia/utils/: __init__.py  logger.py  timer.py
src/adimanusia/visualization/: __init__.py  animator.py
